Chagne cube size, better text, layout issues

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -28,7 +28,7 @@ Heading elements implement six levels of document headings, `<h1>` is the most i
 }
 
 h1, .h1 {
-
+  color: #444;
 }
 
 h2, .h2 {
