--- a/src/styles/module/_box.scss
+++ b/src/styles/module/_box.scss
@@ -1,5 +1,9 @@
 #confetti-canvas-1, #confetti-canvas-2 {
   position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
   z-index: 1;
 }
 
@@ -15,8 +19,8 @@
 }
 
 .box {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   position: relative;
   transform: translate3d(0,0,0);
   transform-style: preserve-3d;
@@ -36,22 +40,22 @@
   animation: glow 1500ms ease-in-out 3;
 }
 .side {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   background: #9EAC25;
   position: absolute;
 }
 .side-1 {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
   position: absolute;
-  transform: rotateX(90deg) translateZ(200px);
+  transform: rotateX(90deg) translateZ(150px);
   transform-style: preserve-3d;
   background-color: darken($color-primary, 10%);
 }
 
 .side-2 {
-  transform: translateZ(200px);
+  transform: translateZ(150px);
   line-height: 30px;
   font-size: 14px;
   text-align: center;
@@ -60,19 +64,19 @@
 }
 
 .side-3 {
-  transform: rotateY(90deg) translateZ(200px);
+  transform: rotateY(90deg) translateZ(150px);
 }
 
 .side-4 {
-  transform: rotateX(-90deg) rotate(180deg) translateZ(200px);
+  transform: rotateX(-90deg) rotate(180deg) translateZ(150px);
 }
 
 .side-5 {
-  transform: rotateY(180deg) translateZ(200px);
+  transform: rotateY(180deg) translateZ(150px);
 }
 
 .side-6 {
-  transform: rotateY(-90deg) translateZ(200px);
+  transform: rotateY(-90deg) translateZ(150px);
   background-color: darken($color-primary, 3%);
 }
 .inner-side {
@@ -80,8 +84,8 @@
 }
 
 .flap-1, .flap-2 {
-  width: 400px;
-  height: 200px;
+  width: 300px;
+  height: 150px;
   background: lighten($color-primary, 2%);
   will-change: transform;
   transform: translate3d(0,0,0);
@@ -89,12 +93,12 @@
 }
 
 .flap-1 {
-  top: 200px;
-  transform-origin: 0px 200px;
+  top: 150px;
+  transform-origin: 0px 150px;
 }
 
 .flap-2 {
-  transform-origin: 400px 0px;
+  transform-origin: 300px 0px;
 }
 .box.open .flap-1 {
   animation: openbox-flap1 500ms ease-in-out 600ms;
